syntax = "proto3";

package ova.conversation.api;

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ozonva/ova-conversation-api/pkg/api";

service ConversationApi {
  rpc CreateConversationV1(CreateConversationV1Request) returns (google.protobuf.Empty) {}
  rpc DescribeConversationV1(DescribeConversationV1Request) returns (DescribeConversationV1Response) {}
  rpc ListConversationsV1(ListConversationsV1Request) returns (ListConversationsV1Response) {}
  rpc RemoveConversationV1(RemoveConversationV1Request) returns (google.protobuf.Empty) {}
  rpc UpdateConversationV1(UpdateConversationV1Request) returns (google.protobuf.Empty) {}
  rpc MultiCreateConversationsV1(MultiCreateConversationsV1Request) returns (google.protobuf.Empty) {}
}

message CreateConversationV1Request {
  uint64 user_id = 1 [(validate.rules).uint64.gt = 0];
  string text = 2;
}

message DescribeConversationV1Request {
  uint64 id = 1 [(validate.rules).uint64.gt = 0];
}

message DescribeConversationV1Response {
  uint64 id = 1;
  uint64 user_id = 2;
  string text = 3;
  google.protobuf.Timestamp date = 4;
}

message ListConversationsV1Request {
  uint64 limit = 1 [(validate.rules).uint64.gt = 0];
  uint64 offset = 2;
}

message ListConversationsV1Response {
  repeated DescribeConversationV1Response conversations = 1;
}

message RemoveConversationV1Request {
  uint64 id = 1 [(validate.rules).uint64.gt = 0];
}

message UpdateConversationV1Request {
  uint64 id = 1 [(validate.rules).uint64.gt = 0];
  string text = 2;
}

message MultiCreateConversationsV1Request {
  repeated CreateConversationV1Request create_conversation = 1;
}
